fix | buttons queries anchor scrollbars

--- a/style.css
+++ b/style.css
@@ -98,13 +98,17 @@ main {
   font-weight: 700;
   border: 2px solid green;
 }
+[class^="btn-sign"]:hover {
+  background-color: rgb(220, 220, 220);
+  cursor: pointer;
+}
 /*-----link nav-bar------*/
 
 .link-nav {
   display: flex;
   max-width: 100%;
   align-items: center;
-  overflow-x: auto;
+  overflow-x: scroll;
   gap: 1rem;
   padding: 1rem;
 }
@@ -115,16 +119,31 @@ main {
   padding: 0.5rem;
   flex-shrink: 0;
 }
+.link-nav::-webkit-scrollbar {
+  display: none;
+}
+
+.link-nav::-webkit-scrollbar:hover {
+  display: unset;
+}
 
 /*----navbar verticale-------*/
 
 .aside-nav {
   width: 75px;
-  max-height: 100%;
+  max-height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   border-right: 1px solid rgb(222, 222, 222);
+  overflow: auto;
+}
+.aside-nav::-webkit-scrollbar {
+  display: none;
+}
+
+.aside-nav::-webkit-scrollbar:hover {
+  display: block;
 }
 
 .links {
@@ -134,18 +153,25 @@ main {
   gap: 1rem;
   padding: 1rem;
 }
-.links > div {
+.links > div > a {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
+  text-decoration: none;
 }
 
-.links > div > span {
+.links > div > a > span {
   font-size: 10px;
   text-align: center;
 }
+.links > div > a:hover {
+  border-radius: 0.5rem;
+  background-color: rgb(220, 220, 220);
+  cursor: pointer;
+}
+
 .channel {
   display: flex;
   flex-direction: column;
@@ -189,8 +215,12 @@ main {
   -webkit-line-clamp: 4;
   overflow: hidden;
 }
-.top-live {
+.top-live,
+.piks,
+.gaming,
+.sports {
   background-color: rgb(235, 235, 235);
+  border-bottom: rgb(200, 200, 200) solid 1px;
 }
 .main-sections-head {
   display: flex;
@@ -201,6 +231,9 @@ main {
 .main-sections-head > button {
   border-radius: 2rem;
   padding: 0.75rem 1rem;
+}
+.main-sections-head > button:hover {
+  background-color: green;
 }
 
 .live-thumbnail {
@@ -235,6 +268,18 @@ main {
 }
 .author > span {
   font-weight: 600;
+}
+
+/*---footer---*/
+
+.footer {
+  display: flex;
+  height: 80px;
+  align-items: center;
+  justify-content: space-around;
+}
+.footer > section > a {
+  text-decoration: none;
 }
 
 /*---media queries----*/
@@ -314,5 +359,8 @@ main {
   }
   .searchbar > button {
     border: none;
+  }
+  .searchbar {
+    width: auto;
   }
 }
